--- a/public/index.css
+++ b/public/index.css
@@ -105,23 +105,23 @@ input[type="checkbox"] {
 
 :root {
   /* Light Mode Variables */
-  --link-color: #0056b3;
-  --link-hover-color: #003a75;
-  --button-bg-color: #2384c6;
-  --button-hover-bg-color: #1c6aa1;
-  --footer-bg-color: #adb5bd;
-  --footer-text-color: #333333;
+  --link-color: #0056b3 !important;
+  --link-hover-color: #003a75 !important;
+  --button-bg-color: #0a496b !important;
+  --button-hover-bg-color: #032d41 !important;
+  --footer-bg-color: #adb5bd !important;
+  --footer-text-color: #333333 !important;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     /* Dark Mode Variables */
-    --link-color: #000000;
-    --link-hover-color: #480101;
-    --button-bg-color: #0a496b;
-    --button-hover-bg-color: #032d41;
-    --footer-bg-color: #343a40;
-    --footer-text-color: #000000;
+    --link-color: #000000 !important;
+    --link-hover-color: #480101 !important;
+    --button-bg-color: #0a496b !important;
+    --button-hover-bg-color: #032d41 !important;
+    --footer-bg-color: #343a40 !important;
+    --footer-text-color: #000000 !important;
   }
 }
 
@@ -136,10 +136,19 @@ input[type="checkbox"] {
 
 .btn-info {
   background-color: var(--button-bg-color);
-  color: #ffffff; /* Ensure white text */
+  color: #fff; /* Ensure white text */
 }
 
 .btn-info:hover {
+  background-color: var(--button-hover-bg-color);
+}
+
+.btn-primary {
+  background-color: var(--button-bg-color);
+  color: #fff; /* Ensure white text */
+}
+
+.btn-primary:hover {
   background-color: var(--button-hover-bg-color);
 }
 
